<package format="3">
  <name>rmf_robot_sim_gz_plugins</name>
  <version>2.0.0</version>
  <description>
    ROS 2 Gazebo plugins for TeleportIngestors and TeleportDispensers
  </description>
  <author>Luca Della Vedova</author>
  <author>Yadunund</author>
  <author>Aaron Chong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_robot_sim_common</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>ignition-fortress</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
