<package format="3">
  <name>rmf_robot_sim_ignition_plugins</name>
  <version>1.2.0</version>
  <description>
    ROS 2 Ignition plugins for TeleportIngestors and TeleportDispensers
  </description>
  <author>Luca Della Vedova</author>
  <author>Yadu</author>
  <author>Aaron Chong</author>
  <author>Rushyendra Maganty</author>
  <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_robot_sim_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
